# pyinstaller

./: .deepsource.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitrevision  .hgignore  .landscape.yml  .pylintrc  .pyup.yml  .readthedocs.yml  .travis.yml  .yapfignore  4209.hook.rst  4490.hooks.rst  4514.hooks.rst  ArchiveViewer.py  Build.py  COPYING.txt  Configure.py  Crypt.py  Dockerfile.tmpl  GrabVersion.py  LICENSE.GPL  LICENSE.LGPL  MANIFEST.in  MakeCOMServer_old.py  MakeComServer.py  Makespec.py  McGUI.py  PyInstaller-GUI.py  README.md  README.rst  README.txt  Sconstruct  TODO  TODO.txt  __version__.py  alpine.dockerfile  appveyor.yml  (+46 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: antivirus.md  blank.md  bug_report.md  config.yml  feature_request.md  question-about-using-pyinstaller.md
.github/workflows/: cancel.yml  ci.yml  codeql-analysis.yml  lint.yml  linux.yml  lock-threads.yml  macos.yml  main.yml  stale.yml  testing.yml  validate-new-news.yml  (+2 more)
PyInstaller/: __init__.py  __main__.py  _recursion_to_deep_message.py  _recursion_too_deep_message.py  _shared_with_waf.py  archive.py  bindepend.py  build.py  carchive.py  compat.py  config.py  configure.py  exceptions.py  gui.py  icon.py  iu.py  log.py  main.py  makespec.py  mf.py  salve amor  utils.py  versionInfo.py  winmanifest.py  winresource.py
bootloader/: .gitattributes  Dockerfile  Dockerfile-amd64  Dockerfile-i386  Dockerfile.osxcross  README.txt  Vagrantfile  build.sh  docker.sh  uncrustify.cfg  update-waf.sh  waf  waf17  wscript  wscript17
buildtests/: error_during_import.py  runtests.py  setupenv_unix.py  setupenv_windows.py  test-celementtree.py  test-celementtree.spec  test-ctypes-cdll-c.py  test-ctypes-cdll-c2.spec  test-email.py  test-email.spec  test-encoders.py  test-encoders.spec  test-matplotlib_i.spec  test-nestedlaunch0.spec  test-nestedlaunch1.py  test-nestedlaunch1.spec  test-pycrypto.py  test-pycrypto.spec  test-pyqt4_i.spec  test-relative-import.py  test-relative-import.spec  test-relative-import2.py  test-relative-import2.spec  test-relative-import3.py  test-tkinter_i.spec  test-wx.py  test-wx.spec  test-wx_i.py  test-wx_i.spec  test-zipimport1.py  test-zipimport1.spec  test-zipimport2.py  test-zipimport2.spec  test1.py  test1.spec  test10.py  test10.spec  test11.py  test11.spec  test12.py  (+76 more)
develutils/: find-empty-hooks.py
doc/: 4684.hooks.rst  CHANGES-1.rst  CHANGES-2.rst  CHANGES-3.rst  CHANGES.rst  CHANGES.txt  CREDITS.rst  KNOWNBUGS.txt  LICENSE  LICENSE.MCMILLAN  Makefile  Manual.html  Tutorial.rst  Tutorial.txt  _common_definitions.txt  _definitions.txt  _dummy-roles.txt  advanced-topics.rst  archives.html  begin.html  bootloader-building.rst  building-for-other-platforms.rst  common-issues-and-pitfalls.rst  conf.py  contributing.rst  credits.txt  feature-notes.rst  help2rst.py  hooks-config.rst  hooks.rst  index.rst  installation.rst  license.rst  make.bat  man-pages.rst  mf4.html  operating-mode.rst  pyi-build.1  pyi-build.html  pyi-configure.html  (+15 more)
examples/: application.exe.manifest  application_winxp.exe.config  assembly.manifest  publisher.policy  template.exe.manifest
hooks/: django-import-finder.py  hook-DateTime.mxDateTime.py  hook-DateTime.py  hook-Image.py  hook-OpenGL.py  hook-PIL.Image.py  hook-PIL.SpiderImagePlugin.py  hook-PIL.py  hook-PyQt4.Qt.py  hook-PyQt4.QtAssistant.py  hook-PyQt4.QtCore.py  hook-PyQt4.QtGui.py  hook-PyQt4.QtNetwork.py  hook-PyQt4.QtOpenGL.py  hook-PyQt4.QtScript.py  hook-PyQt4.QtSql.py  hook-PyQt4.QtTest.py  hook-PyQt4.Qwt5.py  hook-PyQt4.phonon.py  hook-PyQt4.py  hook-PyQt4.uic.port_v2.py  hook-PyQt4.uic.port_v3.py  hook-SpiderImagePlugin.py  hook-_elementtree.py  hook-anydbm.py  hook-babel.py  hook-cPickle.py  hook-cStringIO.py  hook-carchive.py  hook-codecs.py  hook-distutils.py  hook-django.core.mail.py  hook-django.core.management.py  hook-django.db.backends.mysql.base.py  hook-django.db.backends.oracle.base.py  hook-django.db.backends.py  hook-dns.rdata.py  hook-email.message.py  hook-encodings.py  hook-gadfly.py  (+39 more)
makespectests/: runtests.py  script_for_tests.py  test.py  test1.py  test2.py
news/: 1427.tests.rst  1441.feature.rst  1527.bugfix.rst  1566.bootloader.rst  1729.bugfix.rst  1905.feature.rst  1917.core.rst  2075.bugfix.rst  208.bootloader.rst  2147.hooks.rst  2372.bugfix.rst  2379.bugfix.rst  2526.bugfix.rst  2560.deprecation.rst  2574.hooks.rst  2675.bugfix.rst  2822.hooks.rst  2859.hooks.rst  2898.hooks.rst  2952.feature.rst  2966.bootloader.rst  2966.bugfix.rst  2987.hooks.rst  2995.bugfix.rst  2998.hooks.rst  3017.moduleloader.rst  3058.core.rst  3066.breaking.rst  3093.bugfix.rst  3107.tests.rst  3108.tests.rst  3126.bugfix.rst  3141.core.rst  3142.bugfix.rst  3167.bugfix.rst  3236.doc.rst  3251.hooks.rst  3269.hooks.rst  3281.core.rst  3288.breaking.rst  (+974 more)
old/: README.txt  tox.ini
optik/: __init__.py  errors.py  help.py  option.py  option_parser.py  textwrap.py
pyi_optik/: __init__.py  help.py  option_parser.py
pyi_splash-stubs/: __init__.pyi
release/: README.rst  build-manylinux  build-wheels  release.fish
scripts/: clean  clean.bat  compact-junit.py  do_prerelease  do_release  find-empty-hooks.py  pypi_upload  update-copyright  update-readme-versions.sh  upload-manual.sh  verify-news-fragments.py
source/: Sconscript  wscript
support/: _mountzlib.py  _pyi_bootstrap.py  _pyi_egg_extract.py  _pyi_egg_install.py  removeTK.py  unpackTK.py  useUnicode.py
tests/: README.md  README.txt  conftest.py  requirements-base.txt  requirements-developer.txt  requirements-libraries.txt  requirements-linux.txt  requirements-mac.txt  requirements-tools.txt  requirements-win.txt  requirements-win32.txt  requirements.txt  runtests.py  setupenv_unix.py  setupenv_windows.py  test-requirements.txt
utils/: ArchiveExtractor.py  ArchiveViewer.py  BinDepend.py  Build.py  Configure.py  Crypt.py  GrabVersion.py  MakeComServer.py  Makespec.py  archive_viewer.py  bindepend.py  build.py  grab_version.py  make_comserver.py  makespec.py  set_version.py
(+2541 files in other folders)
