[tool.ruff]
exclude = [
   ".git",
   "bootloader",
   "build",
   "dist",
   "doc/_build",
   "doc/conf.py",
   "PyInstaller/lib",
   "tests/functional/data/name_clash_with_entry_point",
   "tests/functional/data/sphinx/conf.py",
   "tests/unit/test_modulegraph",
   # These two files intentionally contains invalid UTF-8 character
   "tests/functional/modules/pyi_module_with_invalid_encoding/mymodule1.py",
   "tests/functional/modules/pyi_module_with_invalid_encoding/mymodule2.py",
]
line-length=120
select = [
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "W",       # pycodestyle warnings
]
show-source = true

[tool.towncrier]
	filename = "doc/CHANGES.rst"
	directory = "news"
	template = "news/_template.rst"
	underlines = "-~^"
	wrap = true
	package = "PyInstaller"
	title_format = "{version} ({project_date})"

	[[tool.towncrier.section]]
		path = ""

	[[tool.towncrier.type]]
		directory = "feature"
		name = "Features"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "bugfix"
		name = "Bugfix"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "breaking"
		name = "Incompatible Changes"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "deprecation"
		name = "Deprecations"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "hooks"
		name = "Hooks"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "bootloader"
		name = "Bootloader"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "moduleloader"
		name = "Module Loader"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "doc"
		name = "Documentation"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "process"
		name = "Project & Process"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "core"
		name = "PyInstaller Core"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "tests"
		name = "Test-suite and Continuous Integration"
		showcontent = true

	[[tool.towncrier.type]]
		directory = "build"
		name = "Bootloader build"
		showcontent = true

[tool.yapf]
indent_width = 4
column_limit = 120
dedent_closing_brackets = true
spaces_before_comment = "2"
space_between_ending_comma_and_closing_bracket = 0
coalesce_brackets = true
blank_line_before_nested_class_or_def = false

[build-system]
# Tells pip to install wheel before trying to install PyInstaller
# from an sdist or from Github.
# Installing without wheel uses legacy `python setup.py install`
# which has issues with unicode paths.
requires = [
	"wheel",
	"setuptools >= 42.0.0",
]
